# data-harvester

./: .gitignore  README.md  pyproject.toml
data/rw/: test_gemini_search.py
src/core/agents/: base.py
src/core/clients/: arango.py  sqlite.py
src/core/configs/: agents.yml  product_line.yml  teams.yml  tools.yml
src/core/database/: arango_handler.py  sqlite_db.py  sqlite_handler.py
src/core/models/: __init__.py  competitors.py  customers.py  metadata.py  payloads.py  product_lines.py  products.py  profile.py  suppliers.py  websites.py
src/core/tests/: test_arango_adapter.py  test_edgar_tools.py  test_gemini_search.py  test_graph_query.py  test_graph_service.py  test_langfuse.py  test_llm_extract.py  test_product_line.py  test_sec_tool.py  test_seed_tool.py  test_sqlite_db.py  test_web_crawler.py  test_web_scraper.py  test_web_search.py  test_wikipedia_tools.py
src/core/tests/tests_graph/: test_GS_LL_from_db.py
src/core/tests/tests_storage/: test_graph_handler.py  test_graph_storage.py  test_sql_handler.py  test_sql_storage.py
src/core/tests/tests_tools/: test_deep_crawl_tool.py  test_extract_tool.py  test_search_tool.py  test_seed_tool.py
src/core/tools/: __init__.py  deep_crawl.py  deep_crawl_tool.py  extract_tool.py  scrape_tool.py  search_tool.py  sec_tool.py  seed_tool.py  web_crawl.py  web_scrape.py  web_search.py
src/core/utils/: helpers.py  logger.py  paths.py
src/core/workflows/: pl_workflow.py  product_line.py  storage_steps.py
src/core/workflows/demo_HL/: agent_steps.py  graph_handler.py  storage_steps.py  workflow.py
(+4 files in other folders)
