[project]
name = "data-harvester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.5",
    "crawl4ai>=0.7.1",
    "duckduckgo-search>=8.1.1",
    "edgartools>=4.5.0",
    "google-genai>=1.26.0",
    "googlesearch-python>=1.3.0",
    "langfuse>=3.2.1",
    "openai>=1.97.0",
    "pycountry>=24.6.1",
    "python-arango>=8.2.1",
    "sqlalchemy>=2.0.42",
    "tavily-python>=0.7.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core"] 
